basic built in index
finish index basicly avec bootsrrap4

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,300 @@
     font-family: Roboto;
     src: url("../fonts/Roboto-Regular.ttf");
 }
+
+.top{
+    background-image: url("../img/banner1_bg.jpg");
+    height: 970px;
+}
+
+.navbar-dark{
+    background-color: transparent;
+}
+
+.nav-item{
+    width:200px;
+    height:30px;
+    padding-left: 30px;
+}
+
+.navbar-dark .navbar-nav .nav-link{
+    font-size:14px;
+    font-weight:400;
+    color:rgba(255,255,255,1);
+    line-height:18px;
+    opacity:0.63;
+}
+
+.nav-button{
+    border: none;
+    width:140px;
+    height:52px;
+    background:rgba(217,48,10,1);
+    border-radius:15px;
+}
+
+.nav-button-link{
+    width:89px;
+    height:14px;
+    font-size:18px;
+    font-weight:bold;
+    color:rgba(255,255,255,1);
+    vertical-align:middle;
+}
+
+.banner{
+    padding-top: 150px;
+    text-align:center
+}
+
+.banner-title{
+    font-size:72px;
+    font-family:Roboto;
+    font-weight:900;
+    color:rgba(255,255,255,1);
+    line-height:72px;
+}
+
+.banner-text{
+    font-size:18px;
+    font-weight:400;
+    color:rgba(255,255,255,1);
+    line-height:72px;
+    opacity:0.63;
+}
+
+.banner-button{
+    width:178px;
+    height:58px;
+    background:rgba(252,200,0,1);
+    border: none;
+}
+
+.banner-button-text{
+    font-size:18px;
+    font-weight:bold;
+    color:rgba(255,255,255,1);
+    line-height:60px;
+    vertical-align:middle;
+}
+
+/* Our Services */
+.services{
+    padding-top: 100px;
+}
+
+.services-row{
+    margin-bottom: 20px;
+}
+
+.services-image-div{
+    height: 270px;
+}
+
+.services-title{
+    font-size:48px;
+    font-family: Roboto, serif;
+    font-weight:bold;
+    color:rgba(217,48,10,1);
+    line-height:70px;
+}
+
+.services-content{
+    font-size:18px;
+    font-family: Roboto, serif;
+    font-weight:400;
+    color:rgba(92,88,86,1);
+    line-height:30px;
+}
+
+.services-item-title{
+    display: inline;
+    margin-left: 15px;
+    font-size:18px;
+    font-family: Roboto, serif;
+    font-weight:bold;
+    color:rgba(7,7,7,1);
+    line-height:42px;
+}
+
+.services-item-content{
+    margin-left: 40px;
+    width: 280px;
+    font-size:14px;
+    font-family: Arial, serif;
+    font-weight:400;
+    color:rgba(92,88,86,1);
+    line-height:26px;
+}
+
+.services-item-end{
+    font-size:14px;
+    font-family: Arial, serif;
+    font-weight:400;
+    color:rgba(252,200,0,1);
+    line-height:26px;
+}
+
+/* About Singapore */
+.about-singapore{
+    margin-top: 100px;
+    background-image: url("../img/about-background.png");
+}
+
+.aboutS-title{
+    margin-top: 80px;
+    font-size:48px;
+    font-family:Roboto;
+    font-weight:bold;
+    color:rgba(217,48,10,1);
+    line-height:70px;
+}
+
+.aboutS-content{
+    font-size:18px;
+    font-family:Roboto;
+    font-weight:400;
+    color:rgba(92,88,86,1);
+    line-height:24px;
+}
+
+.aboutS-second-row{
+    margin-top: 120px;
+}
+
+.thumbnail{
+    background-color: transparent;
+    border-color:transparent;
+}
+
+.thumbnail .caption{
+    position: relative;
+    width: 330px;
+    top: -222px;
+    left: 10%;
+    background-color: rgba(255,255,255,1);
+}
+
+.aboutS-item-p1{
+    width: 227px;
+    margin: 50px auto 20px auto;
+    font-size:22px;
+    font-family:Roboto;
+    font-weight:400;
+    color:rgba(43,44,45,1);
+    line-height:34px;
+}
+.aboutS-item-p1::before{
+    content: url("../img/slash.png");
+    position: absolute;
+    left: 8%
+}
+
+.aboutS-item-p1::after{
+    content: url("../img/slash.png");
+    position: absolute;
+    right: 10%;
+}
+
+.aboutS-item-p2{
+    height:14px;
+    margin-left: 50px;
+    font-size:16px;
+    font-family:Roboto;
+    font-weight:bold;
+    color:rgba(43,44,45,1);
+    line-height:48px;
+}
+
+.aboutS-item-p3{
+    margin-left: 50px;
+    font-size:16px;
+    font-family:Roboto;
+    font-weight:bold;
+    color:rgba(43,44,45,1);
+    line-height:48px;
+}
+
+/* Friends we've made */
+.friends-title{
+    width:423px;
+    font-size:48px;
+    font-family:Roboto;
+    font-weight:bold;
+    color:rgba(217,48,10,1);
+    line-height:70px;
+    margin: 50px auto 10px auto;
+}
+
+.friends-content{
+    width:340px;
+    font-size:18px;
+    font-family:Roboto;
+    font-weight:400;
+    color:rgba(43,44,45,1);
+    line-height:24px;
+    margin: 10px auto;
+}
+
+.friends-item-img{
+    margin: 10px auto 100px auto;
+}
+
+/* contact info with red background */
+.contact_info{
+    background-color: rgba(217,48,10,1);
+}
+
+.contact_info-row-one{
+    font-size:14px;
+    font-family:Roboto;
+    font-weight:bold;
+    color:rgba(255,255,255,1);
+    line-height:70px;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    height:14px;
+}
+
+.contact_info-row-two{
+    font-size:14px;
+    font-family:Roboto;
+    font-weight:400;
+    color:rgba(255,255,255,1);
+    line-height:70px;
+    margin-bottom: 30px;
+}
+
+/* bottom navigator */
+.bottom_nav{
+    background-color: black;
+}
+
+.bottom_nav_logo{
+    margin-top: 50px;
+}
+
+.bottom_nav_text{
+    font-size:12px;
+    font-family:Roboto;
+    font-weight:400;
+    color:rgba(255,255,255,1);
+    line-height:24px;
+}
+
+.bottom_nav_title{
+    margin-top: 50px;
+    font-size:18px;
+    font-family:Poppins;
+    font-weight:600;
+    color:rgba(255,255,255,1);
+    line-height:24px;
+}
+
+.bottom_nav_link{
+    font-size:14px;
+    font-family:Roboto;
+    font-weight:400;
+    color:rgba(255,255,255,1);
+    line-height:36px;
+}
